--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -7,7 +7,7 @@
 // General colors
 @syntax-text-color: #AABBC3;
 @syntax-cursor-color: #009688;
-@syntax-selection-color: darken(@syntax-text-color, 58%);
+@syntax-selection-color: lighten(@syntax-background-color, 10%);
 @syntax-background-color: #263238;
 @syntax-comment-color: #49656f;
 
